--- a/.github/workflows/push2ECR.yml
+++ b/.github/workflows/push2ECR.yml
@@ -30,7 +30,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: my-app-repo
+          ECR_REPOSITORY: test-repo
           IMAGE_TAG: latest
         run: |
           ls
@@ -40,7 +40,7 @@ jobs:
         id: push-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: my-app-repo
+          ECR_REPOSITORY: test-repo
           IMAGE_TAG: latest
         run: |
 
